--- a/about.html
+++ b/about.html
@@ -1,3 +1,7 @@
+<!-- NAME: Miguel Cordero
+      COURSE: MMP 310
+      DATE: 11/6/2016 -->
+
 <!doctype html>
 <html> 
     <head>
@@ -30,14 +34,14 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="#">About Us<span class="sr-only">(current)</span></a></li>
-                    <li><a href="#">Contact</a></li>
+                <!--    <li class="active"><a href="#">About Us<span class="sr-only">(current)</span></a></li>
+                    <li><a href="#">Contact</a></li> -->
                 </ul>
             </div> <!-- .nav-collapse -->
-        </div> <!-- container -->   
+        </div> <!--  nav container -->   
     </nav>
     <body>
-        <div class="container">
+        <div class="container">             <!-- Main section of the webpage -->
             <div class="row">
                 <div class="col-sm-1 col-md-1 "></div>
                 <div class="col-xs-12 col-sm-12 col-md-4 leftSide-about">
@@ -50,7 +54,7 @@
                 <div class="col-sm-1 col-md-1"></div>
             </div>     
         </div> <!-- container -->
-        <footer class="page-footer">
+        <footer class="page-footer">                <!-- Footer -->
             <div class="container">
                 <nav role="navigation">
                     <ul class="nav navbar-nav">
@@ -61,7 +65,6 @@
                 <span class="copyright">&copy;2016 INVOX </span>
             </div>
         </footer>  
-        
         <!--link the latest minified jQuery framework, necessary for using Bootstrap's JS plugings-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <script src="https://code.jquery.com/jquery-2.2.2.min.js"   integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="   crossorigin="anonymous"></script>
